[gd_scene load_steps=4 format=3 uid="uid://26bso3t8qqc6"]

[ext_resource type="Script" path="res://code/projectiles/BathBombProjectile.gd" id="1_u0b1y"]
[ext_resource type="Texture2D" uid="uid://beh87mbu8pf3a" path="res://graphics/icons/icon_clean_grenade.png" id="1_xcde1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5xniv"]

[node name="BathBombProjectile" type="CharacterBody2D"]
script = ExtResource("1_u0b1y")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_xcde1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5xniv")
one_way_collision_margin = 15.0

[node name="DetonationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DetonationTimer" to="." method="_detonation_timer_elapsed"]
